--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,62 +9,67 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="chrisbohn.com.choosy.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Let&apos;s get choosy!"
-        android:id="@+id/textView3"
+    <!--<selector xmlns:android="http://schemas.android.com/apk/res/android">-->
+        <!--<item android:state_pressed="true"-->
+            <!--android:drawable="@drawable/button_pressed" /> &lt;!&ndash; pressed &ndash;&gt;-->
+        <!--<item android:state_focused="true"-->
+            <!--android:drawable="@drawable/button_focused" /> &lt;!&ndash; focused &ndash;&gt;-->
+        <!--<item android:drawable="@drawable/awesome-face" /> &lt;!&ndash; default &ndash;&gt;-->
+    <!--</selector>-->
+
+    <LinearLayout
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Who&apos;s in the running?"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="33dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/let_apos_s_get_choosy"
+            android:id="@+id/textView3" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add photos"
-        android:id="@+id/button"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/who_apos_s_in_the_running"
+            android:id="@+id/textView2"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Which do you like best?"
-        android:id="@+id/textView"
-        android:layout_marginTop="66dp"
-        android:layout_below="@+id/button"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_photos"
+            android:id="@+id/button" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="33dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="84dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/which_do_you_like_best"
+            android:id="@+id/textView"/>
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageButton2"
-        android:layout_alignTop="@+id/imageButton"
-        android:layout_alignLeft="@+id/button"
-        android:layout_alignStart="@+id/button" />
+        <ImageButton
+                android:padding="10dp"
+                android:scaleType="fitXY"
+                android:layout_width="256dp"
+                android:layout_height="192dp"
+                android:id="@+id/imageButton"
+                android:contentDescription="@string/image_1" />
+
+        <ImageButton
+                android:padding="10dp"
+                android:scaleType="fitXY"
+                android:layout_width="256dp"
+                android:layout_height="192dp"
+                android:id="@+id/imageButton2"
+                android:contentDescription="@string/image_2" />
+
+
+    </LinearLayout>
 
 </RelativeLayout>
